Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1964

'Isset' causes problems with C#/.NET serializers

    XMLWordPrintableJSON

Details

    • Patch Available

    Description

      same class name 'Isset' in user defined class will cause xmlserializer crashed.

      below is the sample thrift:
      struct A {
      1: string x;
      }

      struct B {
      1: string y;
      }

      struct C {
      1:A a
      2:B b
      }

      generate code and try xmlserialize instance of class C. it crashed.

      Attachments

        1. a.thrift
          0.1 kB
          xq.gzh
        2. ReproduceTheIssue.zip
          78 kB
          xq.gzh
        3. fix_Isset_xmlserializer.patch
          1 kB
          xq.gzh
        4. fix_isset_problem_test.zip
          30 kB
          xq.gzh
        5. 1964-v2.patch
          2 kB
          Carl Yeksigian
        6. 1964.patch
          4 kB
          Carl Yeksigian
        7. modified-testcase.zip
          1 kB
          Jens Geyer
        8. THRIFT-1964-serializer-vs-isset-v2.patch
          4 kB
          Jens Geyer

        Issue Links

          Activity

            People

              jensg Jens Geyer
              xqgzh xq.gzh
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 8h
                  8h
                  Remaining:
                  Remaining Estimate - 8h
                  8h
                  Logged:
                  Time Spent - Not Specified
                  Not Specified