THRIFT-1964 'Isset' causes problems with C#/.NET serializers

Patch: Jens Geyer